# only.py

./: README.md  requirements.txt  setup.cfg  setup.py
only/: __init__.py
tests/only/examples/@only.linux/: func.py  method.py
tests/only/examples/@only.osx/: func.py  method.py
tests/only/examples/@only.windows/: func.py  method.py
