# https://pypi.org/project/setupcfg-generator/
[metadata]
name = only
version = 2019.3.22
url = https://github.com/looking-for-a-job/only.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = only decorator

[options]
install_requires = 
	decorator
	detect
	public
	setuptools
packages = 
	only
